// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/pages/profile.vue shows a phone numbers profile information 1`] = `
<section
  class="page"
  id="profile"
>
  <header>
    <!---->
     
    <!---->
     
    <!---->
  </header>
   
  <!---->
</section>
`;

exports[`@/pages/profile.vue shows the users profile information 1`] = `
<section
  class="page me"
  id="profile"
>
  <header>
    <!---->
     
    <!---->
     
    <!---->
  </header>
   
  <!---->
</section>
`;
